final-devops-project/kubernetes/20-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clinicdesk-backend
  namespace: clinicdesk
  labels:
    app.kubernetes.io/name: clinicdesk
    app.kubernetes.io/component: backend
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate: {maxUnavailable: 0, maxSurge: 1}
  selector:
    matchLabels:
      app.kubernetes.io/name: clinicdesk
      app.kubernetes.io/component: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: clinicdesk
        app.kubernetes.io/component: backend
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        seccompProfile: {type: RuntimeDefault}
      containers:
        - name: backend
          image: ghcr.io/saptak-cyber/clinicdesk-backend:latest   # pinned to a commit SHA via kustomization.yaml
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          startupProbe:
            httpGet: {path: /health, port: http}
            periodSeconds: 3
            failureThreshold: 40
          livenessProbe:
            httpGet: {path: /health, port: http}
            periodSeconds: 15
            timeoutSeconds: 3
          readinessProbe:
            httpGet: {path: /ready, port: http}
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests: {cpu: 100m, memory: 160Mi}
            limits: {cpu: 500m, memory: 384Mi}
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: {drop: [ALL]}
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: clinicdesk-backend
  namespace: clinicdesk
  labels:
    app.kubernetes.io/name: clinicdesk
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: clinicdesk
    app.kubernetes.io/component: backend
  ports:
    - name: http
      port: 8000
      targetPort: http
