final-devops-project/kubernetes/30-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clinicdesk-frontend
  namespace: clinicdesk
  labels:
    app.kubernetes.io/name: clinicdesk
    app.kubernetes.io/component: frontend
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate: {maxUnavailable: 0, maxSurge: 1}
  selector:
    matchLabels:
      app.kubernetes.io/name: clinicdesk
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: clinicdesk
        app.kubernetes.io/component: frontend
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        seccompProfile: {type: RuntimeDefault}
      containers:
        - name: frontend
          image: ghcr.io/saptak-cyber/clinicdesk-frontend:latest   # pinned to a commit SHA via kustomization.yaml
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet: {path: /healthz, port: http}
            periodSeconds: 10
          livenessProbe:
            httpGet: {path: /healthz, port: http}
            initialDelaySeconds: 5
            periodSeconds: 20
          resources:
            requests: {cpu: 25m, memory: 32Mi}
            limits: {cpu: 200m, memory: 128Mi}
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: {drop: [ALL]}
          volumeMounts:
            - {name: tmp, mountPath: /tmp}                 # nginx pid + temp files
            - {name: conf, mountPath: /etc/nginx/conf.d}   # envsubst writes default.conf here
      volumes:
        - {name: tmp, emptyDir: {}}
        - {name: conf, emptyDir: {}}
---
apiVersion: v1
kind: Service
metadata:
  name: clinicdesk-frontend
  namespace: clinicdesk
  labels:
    app.kubernetes.io/name: clinicdesk
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: clinicdesk
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
